test: adjusting tests features to java 8 compatibility